# substrate-ssvm-node

./: 3.0.patch  Cargo.toml  Dockerfile  README.md
.github/workflows/: .autobuild.yml
client/consensus/: Cargo.toml
client/rpc/: Cargo.toml
docs/: interact-using-cli.md  interact-using-web.md
docs/erc20/: erc20.hex
erc20/: erc20.sol
frame/dynamic-fee/: Cargo.toml
frame/ethereum/: Cargo.toml
frame/evm/: Cargo.toml
frame/evm/precompile/blake2/: Cargo.toml
frame/evm/precompile/bn128/: Cargo.toml
frame/evm/precompile/dispatch/: Cargo.toml
frame/evm/precompile/dispatch/src/: lib.rs
frame/evm/precompile/ed25519/: Cargo.toml
frame/evm/precompile/modexp/: Cargo.toml
frame/evm/precompile/simple/: Cargo.toml
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/ssvm/: Cargo.toml
pallets/ssvm/src/: backend.rs  lib.rs
primitives/consensus/: Cargo.toml
primitives/consensus/src/: lib.rs
primitives/evm/: Cargo.toml
primitives/evm/src/: precompile.rs
primitives/rpc/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: init.sh
