[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
description = "A new FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
futures = "0.3.1"
log = "0.4.8"
structopt = "0.3.8"

pallet-ssvm = { git = "https://github.com/second-state/pallet-ssvm", tag = "v0.1.0-rc1-crates" }

sc-cli = { version = "0.8.0", features = ["wasmtime"] }
sp-core = { version = "2.0.0" }
sc-executor = { version = "0.8.0", features = ["wasmtime"] }
sc-service = { version = "0.8.0", features = ["wasmtime"] }
sc-network = { version = "0.8.0" }
sp-inherents = { version = "2.0.0" }
sc-transaction-pool = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
sc-consensus-aura = { version = "0.8.0" }
sp-consensus-aura = { version = "0.8.0" }
sp-consensus = { version = "0.8.0" }
sc-consensus = { version = "0.8.0" }
sc-finality-grandpa = { version = "0.8.0" }
sp-finality-grandpa = { version = "2.0.0" }
sc-client-api = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.0.0"
sc-rpc = { version = "2.0.0" }
sp-api = { version = "2.0.0" }
sc-rpc-api = { version = "0.8.0" }
sp-blockchain = { version = "2.0.0" }
sp-block-builder = { version = "2.0.0" }
sc-basic-authorship = { version = "0.8.0" }
substrate-frame-rpc-system = { version = "2.0.0" }
pallet-transaction-payment-rpc = { version = "2.0.0" }

node-template-runtime = { version = "2.0.0", path = "../runtime" }
[build-dependencies]
substrate-build-script-utils = { version = "2.0.0" }

[features]
default = []
