[package]
authors = ['Anonymous']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'node-template-runtime'
repository = 'https://github.com/paritytech/substrate/'
version = '2.0.0-alpha.5'

[dependencies.ssvm]
default-features = false
package = 'pallet-ssvm'
git = 'https://github.com/second-state/pallet-ssvm'
rev = 'c6b07ced021e89e3e1acd6a634aabe25297037f1'

[dependencies.sha3]
default-features = false
version = '0.8'

[dependencies.hash256-std-hasher]
default-features = false
version = '0.15.2'

[dependencies.aura]
default-features = false
package = 'pallet-aura'
version = '2.0.0-alpha.5'

[dependencies.balances]
default-features = false
package = 'pallet-balances'
version = '2.0.0-alpha.5'

[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.2.0'

[dependencies.frame-executive]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.frame-support]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.grandpa]
default-features = false
package = 'pallet-grandpa'
version = '2.0.0-alpha.5'

[dependencies.randomness-collective-flip]
default-features = false
package = 'pallet-randomness-collective-flip'
version = '2.0.0-alpha.5'

[dependencies.serde]
features = ['derive']
optional = true
version = '1.0.101'

[dependencies.sp-api]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-block-builder]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-consensus-aura]
default-features = false
version = '0.8.0-alpha.5'

[dependencies.sp-core]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-inherents]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-io]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-offchain]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-runtime]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-session]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-std]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-transaction-pool]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sp-version]
default-features = false
version = '2.0.0-alpha.5'

[dependencies.sudo]
default-features = false
package = 'pallet-sudo'
version = '2.0.0-alpha.5'

[dependencies.system]
default-features = false
package = 'frame-system'
version = '2.0.0-alpha.5'

[dependencies.timestamp]
default-features = false
package = 'pallet-timestamp'
version = '2.0.0-alpha.5'

[dependencies.transaction-payment]
default-features = false
package = 'pallet-transaction-payment'
version = '2.0.0-alpha.5'
[build-dependencies.wasm-builder-runner]
package = 'substrate-wasm-builder-runner'
version = '1.0.5'

[features]
default = ['std']
std = [
    'aura/std',
    'balances/std',
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'grandpa/std',
    'randomness-collective-flip/std',
    'serde',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
    'sp-io/std',
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'sudo/std',
    'system/std',
    'timestamp/std',
    'transaction-payment/std',
    'ssvm/std',
    'hash256-std-hasher/std',
    'sha3/std',
]
