[package]
name = "fc-consensus"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/paritytech/frontier/"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", version = '3.0.0' }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", version = '3.0.0' }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", version = '3.0.0' }
sp-api = { git = "https://github.com/paritytech/substrate.git", version = '3.0.0' }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", version = '3.0.0' }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", version = '3.0.0' }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", version = '3.0.0' }
fp-consensus = { version = "0.1.0", path = "../../primitives/consensus" }
fp-rpc = { path = "../../primitives/rpc" }
sp-consensus = '0.9.0'
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", version = '3.0.0' }
derive_more = "0.99.2"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", version = '0.9.0'}
