[package]
name = "pallet-ssvm"
version = "0.0.1"
authors = ["Second State"]
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/second-state/"
description = "Substrate SSVM pallet"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }
codec = { package = "parity-scale-codec", version = "1.2.0", default-features = false }
frame-support = { version = "2.0.0-alpha.5", default-features = false }
frame-system = { version = "2.0.0-alpha.5", default-features = false }
pallet-timestamp = { version = "2.0.0-alpha.5", default-features = false }
pallet-balances = { version = "2.0.0-alpha.5", default-features = false }
sp-core = { version = "2.0.0-alpha.5", default-features = false }
sp-runtime = { version = "2.0.0-alpha.5", default-features = false }
sp-std = { version = "2.0.0-alpha.5", default-features = false }
sp-io = { version = "2.0.0-alpha.5", default-features = false }
primitive-types = { version = "0.7.0", default-features = false, features = ["rlp"] }
rlp = { version = "0.4", default-features = false }
evm = { version = "0.16", default-features = false }
sha3 = { version = "0.8", default-features = false }
ssvm = { optional = true, package = "rust-ssvm", path = "../../../rust-ssvm" }
hex = "^0.4"

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"sp-core/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-io/std",
	"sp-std/std",
	"sha3/std",
	"rlp/std",
	"primitive-types/std",
	"evm/std",
	"pallet-timestamp/std",
	"ssvm",
]
